add auth middlewares, users endpoints and more edits
