# docs/swagger.json
@@ -18,11 +18,34 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/myposts": {
+            "get": {
+                "description": "Get a list of all my posts",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Posts"
+                ],
+                "summary": "List all my posts",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/schema.ListPostsResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/posts": {
             "get": {
                 "description": "Get a list of all posts",
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Posts"
                 ],
                 "summary": "List all posts",
                 "responses": {
@@ -41,6 +64,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Posts"
                 ],
                 "summary": "Create a new post",
                 "parameters": [
@@ -70,6 +96,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Posts"
+                ],
                 "summary": "View single post",
                 "parameters": [
                     {
@@ -96,6 +125,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Posts"
                 ],
                 "summary": "Update post",
                 "parameters": [
@@ -127,6 +159,9 @@
             },
             "delete": {
                 "description": "Delete a post by ID",
+                "tags": [
+                    "Posts"
+                ],
                 "summary": "Delete post",
                 "parameters": [
                     {
@@ -144,6 +179,26 @@
                 }
             }
         },
+        "/users": {
+            "get": {
+                "description": "Get a list of all users",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "List all users",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/schema.ListUsersResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/users/login": {
             "post": {
                 "description": "Login a user and generate a JWT token",
@@ -154,7 +209,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authentication"
+                    "Users"
                 ],
                 "summary": "Login a user",
                 "parameters": [
@@ -168,6 +223,26 @@
                         }
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/schema.TokenResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/profile": {
+            "get": {
+                "description": "Get details of my profile",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "View my profile",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -188,7 +263,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authentication"
+                    "Users"
                 ],
                 "summary": "Register a new user",
                 "parameters": [
@@ -206,7 +281,36 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/schema.ViewUserResponse"
+                            "$ref": "#/definitions/schema.TokenResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/user-posts/{id}": {
+            "get": {
+                "description": "Get a list of all user posts",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "List all user posts",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/schema.ListPostsResponse"
                         }
                     }
                 }
@@ -250,6 +354,31 @@
                     "items": {
                         "$ref": "#/definitions/schema.ViewPostResponse"
                     }
+                }
+            }
+        },
+        "schema.ListUsersResponse": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "errors": {
+                    "type": "string"
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schema.ViewUserResponse"
+                    }
+                }
+            }
+        },
+        "schema.TokenResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
                 }
             }
         },
@@ -298,6 +427,9 @@
                 },
                 "ID": {
                     "type": "integer"
+                },
+                "Role": {
+                    "type": "string"
                 },
                 "UpdatedAt": {
                     "type": "string"
